--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -94,6 +94,11 @@
               </a>
           </li>
           <li>
+              <a href="/customer/customer_missed_frequency" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de Clientes que não Voltaram/Frequência" data-original-title="Relatório de Clientes que não Voltaram/Frequência">
+                <img width='32' src="/images/calendar_addon.png"/>
+              </a>
+          </li>
+          <li>
               <a href="/customer/customer_account_report" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de saldo de conta cliente" data-original-title="Relatório de saldo de conta cliente">
                 <img width='32' src="/images/account_customer.png"/>
               </a>
