customer missed unit

--- a/src/main/webapp/customer/customer_missed.html
+++ b/src/main/webapp/customer/customer_missed.html
@@ -151,7 +151,7 @@
                 <div class="input">
                   <div class="inline-inputs">
                     <select id="unit" name="unit"></select>
-                    <span class="help-block">Unidade do atendimento, mesmo que o <span data-i18n='Profissional'></span> tenha outra unidade no cadastro
+                    <span class="help-block">Unidade do <span data-i18n='Profissional'></span>
                     </span>
                   </div>
                 </div>
