--- a/src/main/webapp/customer/customer_missed_frequency.html
+++ b/src/main/webapp/customer/customer_missed_frequency.html
@@ -11,7 +11,7 @@
     $("#send_message").notificationField(true);
     $("#user").userField();
     $("#offsale").offSaleField(true);
-    $("#start").val(getDateBr(new Date().getAYearAgo())); 
+    $("#start").val(getDateBr(new Date())); 
     var hasUnitModule = $('.has-unit-module').length > 0;
     var fields = [];
     var total = 0;
@@ -79,35 +79,31 @@
         <div class="row">
           <div class="span8">
             <div class="clearfix">
-              <label for="start">Intervalo Veio</label>
+              <label for="start">Data base</label>
               <div class="input">
                 <div class="inline-inputs">
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
                     <input type="text" class="input-small date" id='start' name="start" placeholder="Início"/>
                   </div>
-                  <div class="input-prepend" style="float:left; padding-right:10px">
-                    <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
-                    <input type="text" class="input-small date start_of_month" id='end' name="end" placeholder="Fim"/>
-                  </div>
                 </div>
               </div>
             </div>
             <div class="clearfix">
-              <label for="start2">Intervalo Não Veio</label>
-              <div class="input">
-                <div class="inline-inputs">
-                  <div class="input-prepend" style="float:left; padding-right:10px">
-                    <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
-                    <input type="text" class="input-small date start_of_month" id='start2' name="start2" placeholder="Início"/>
-                  </div>
-                  <div class="input-prepend" style="float:left; padding-right:10px">
-                    <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
-                    <input type="text" class="input-small date to_day" id='end2' name="end2" placeholder="Fim"/>
+              <label for="period">Período</label>
+                <div class="input">
+                  <div class="inline-inputs">
+                      <select class="local_storage" name="period" id="period">
+                          <option value='7'>7 Dias</option>
+                          <option value='14'>14 Dias</option>
+                          <option value='30'>30 dias</option>
+                          <option value='90'>90 dias</option>
+                          <option value='180'>180 dias</option>
+                       </select>
                   </div>
                 </div>
-              </div>
             </div>
+
             <div class="clearfix">
                 <label for="user"><span data-i18n='Profissionais'></span></label>
                 <div class="input">
@@ -144,7 +140,8 @@
                </div>
             </div>                        
           </div>
-          <div class="span7">
+          <div class="span7 lift:SecuritySnippet.isSuperAdmin">
+          <b>**** Parâmetros ainda não implementados - só super admin vẽ</b>
             <div class="clearfix">
               <label for="productclass">Classe</label>
                 <div class="input">
