account html audit

--- a/src/main/webapp/financial_admin/account.html
+++ b/src/main/webapp/financial_admin/account.html
@@ -73,6 +73,12 @@
               </div>
             </div>
           </div>          
+          <div class="clearfix">
+              <label for="auditstr">Auditoria</label>
+              <div class="input">
+                <input class="xlarge disabled" disabled="true" id="auditstr" name="auditstr"  type="text"/>
+              </div>
+          </div>                     
         </span>
       </div>
     </form>
