--- a/src/main/webapp/financial_admin/accountcompanyunit.html
+++ b/src/main/webapp/financial_admin/accountcompanyunit.html
@@ -69,6 +69,12 @@
                 </div>
              </div>
           </div>
+          <div class="clearfix">
+              <label for="auditstr">Auditoria</label>
+              <div class="input">
+                <input class="xlarge disabled" disabled="true" id="auditstr" name="auditstr"  type="text"/>
+              </div>
+          </div>                     
           <!--
           nao pode inativar conta de unidade. ou inativa a conta ou a unidade
 
