budget list - obs

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -221,6 +221,7 @@
                   <th>Seção</th>
                   <th>Prod/Serv</th>
                   <th>Dente</th>
+                  <th>Obs</th>
                   <th>Pr Lista</th>
                   <th>Tot Lista</th>
                   <th>Qtde</th>
