command detail tooth and pet

--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -415,6 +415,12 @@
                                 </a>
                             </div>
                         </div>
+                          <div class="form-inline">
+                              <div class="form-group">
+                                  <label for="auditstr">Auditoria</label>
+                                  <textarea id="auditstr" name="auditstr" class="form-control" cols="30" rows="2" disabled="true"></textarea>
+                              </div>
+                          </div>
 
                       </span>
                 </span>
