cheque auditstr - audistr html convention

--- a/src/main/webapp/financial_admin/control_panel.html
+++ b/src/main/webapp/financial_admin/control_panel.html
@@ -21,6 +21,7 @@
 			<th>Número do Cheque</th>
 			<th>Valor</th>
 			<th>Data</th>
+			<th>Bom Para</th>
 			<th>Cliente</th>
 			<th>Recebido</th>
 		</thead>
