--- a/src/main/webapp/bpmonthly/bpmonthly.html
+++ b/src/main/webapp/bpmonthly/bpmonthly.html
@@ -173,33 +173,12 @@
               </div>
             </span>
             <span class='span12'>
-              <div class="clearfix lift:SecuritySnippet.hasAuditModule">
-                  <label for="createdAt">Criado/Alterado</label>
+              <div class="clearfix">
+                  <label for="auditstr">Auditoria</label>
                   <div class="input">
-                    <div class='inline-inputs'>
-                      <div class="input-prepend" style='float:left; padding-right:10px'>
-                        <span class="add-on"><img width="16" src='/images/calendar_addon.png'/></span> 
-                        <input class="input-medium datetime disabled" disabled="true" id="createdAt" name="createdAt" size="19" type="text"/>
-                      </div>
-                      <div class="input-prepend" style='float:left; padding-right:10px'>
-                        <span class="add-on"><img width="16" src='/images/calendar_addon.png'/></span> 
-                        <input class="input-medium datetime disabled" disabled="true" id="updatedAt" name="updatedAt" size="19" type="text"/>
-                      </div>
-                    </div>
+                    <input class="xlarge disabled" disabled="true" id="auditstr" name="auditstr"  type="text"/>
                   </div>
-                  <div class="input">
-                    <div class='inline-inputs'>
-                      <div class="input-prepend" style='float:left; padding-right:10px'>
-                        <span class="add-on"><img src='/images/sex.png'/></span> 
-                        <input class="input-medium disabled" disabled="true" id="createdby" name="createdby" size="19" type="text"/>
-                      </div>
-                      <div class="input-prepend" style='float:left; padding-right:10px'>
-                        <span class="add-on"><img src='/images/sex.png'/></span> 
-                        <input class="input-medium disabled" disabled="true" id="updatedby" name="updatedby" size="19" type="text"/>
-                      </div>
-                    </div>
-                  </div>                            
-              </div>   
+              </div>                     
             </span>                  
           </span>
         </span>
