--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -316,7 +316,7 @@
                               <option value="21">Prof Agenda Geral</option>
                               <option value="16">Prof Comissão</option>
                               <option value="17">Prof Comanda</option>
-                              <option class="lift:SecuritySnippet.isEgrexSystem" value="14">Somente Consulta</option>
+                              <option value="14">Somente Consulta</option>
                               <option class="lift:SecuritySnippet.isSuperAdmin" value="1000">Super Admin</option>
                               <option class="lift:SecuritySnippet.isSupportAdmin" value="900">Suporte Admin</option>
                             </select>
