--- a/src/main/webapp/activity/edit.html
+++ b/src/main/webapp/activity/edit.html
@@ -24,7 +24,7 @@
     <div class="well">
       <label class="hide_mobile" for="btn"></label>
       <a class="btn primary" href="/activity/list">Lista</a>
-      <input class="btn success" type="submit" value="Salvar">
+      <input class="lift:SecuritySnippet.isNotAdminRead btn success" type="submit" value="Salvar">
       <a class="btn primary" href="/activity/edit">Inserir novo</a>
       <a class="btn primary lift:SecuritySnippet.isSuperAdmin " id="pbom_link" target="relationshippage" alt= "Criar pacote para este serviço" href="/bprelationship/bprelationship?business_pattern=##">Pacote</a>
     </div>
@@ -398,7 +398,7 @@
         <div class="well">
           <label for="btn"></label>
           <a class="btn primary" href="/activity/list">Lista</a>
-          <input class="btn success" type="submit" value="Salvar">
+          <input class="btn success lift:SecuritySnippet.isNotAdminRead" type="submit" value="Salvar">
           <a class="btn primary" href="/activity/edit">Inserir novo</a>
         </div>
           <ul class="tabs">
