--- a/src/main/webapp/product_admin/edit.html
+++ b/src/main/webapp/product_admin/edit.html
@@ -9,7 +9,7 @@
       <div class="well">
         <label for="btn"></label>
         <a class="btn primary" href="/product/list">Lista</a>
-        <input class="btn success" type="submit" value="Salvar" id="pr_salvar" name="pr_salvar">
+        <input class="lift:SecuritySnippet.isNotAdminRead btn success" type="submit" value="Salvar" id="pr_salvar" name="pr_salvar">
         <a class="btn primary" href="/product_admin/edit">Inserir novo</a>
       </div>
       <div class="lift:ProductSnippet.maintain">
@@ -269,7 +269,7 @@
           <div class="well">
             <label for="btn"></label>
             <a class="btn primary" href="/product/list">Lista</a>
-            <input class="btn success" type="submit" value="Salvar">
+            <input class="lift:SecuritySnippet.isNotAdminRead btn success" type="submit" value="Salvar">
             <a class="btn primary" href="/product_admin/edit">Inserir novo</a>
           </div>
       </div>
@@ -393,7 +393,7 @@
                 </div>
                 <div class="clearfix">
                    <div class="input">
-                      <input class="btn success" id="b_save" type="button" value="Salvar"/>
+                      <input class="lift:SecuritySnippet.isNotAdminRead btn success" id="b_save" type="button" value="Salvar"/>
                    </div>
                 </div>
               </div>
