unify customer origin - cheque report

--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -154,7 +154,7 @@
             </a>
         </li>         
         <li>
-          <a href="/financial_admin/control_panel" target="_blancccck" class="_popover" rel="popover" data-content="Contas a receber" data-original-title="Fluxo de Caixa">
+          <a href="/financial_admin/control_panel" target="_blancccck" class="_popover" rel="popover" data-content="Contas a receber" data-original-title="Cheques a descontar">
             <img width='32' src="/images/bills_to_receiver.png"/>
           </a>
         </li>           
