--- a/src/main/webapp/financial_admin/control_panel.html
+++ b/src/main/webapp/financial_admin/control_panel.html
@@ -5,12 +5,22 @@
 </h3>
 <form>
   <div class="clearfix">
-    <label for="name">Total </label>
-    <div class="input-prepend">
-            <span class="add-on"><img src="/images/cheque.png" width="16"></span>
-            <input disabled='true' class="mini currency" type="text" name='total' id='total' value="00.00">
+    <label for="count">Total </label>
+    <div class="input">
+      <div class="inline-inputs">
+        <div class="input-prepend" style="float:left; padding-right:10px">
+          <span class="add-on"><img src="/images/count.png" width="16"></span>
+          <input style="color:black;" class="small disabled" id="count" name="count" size="19" placeholder="0.00" type="text" disabled='true'>
+          <span class="help-block">Qtde</span>
+        </div>
+        <div class="input-prepend" style="float:left; padding-right:10px">
+          <span class="add-on"><img src="/images/money.png" width="16"></span>
+          <input style="color:black;" class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
+          <span class="help-block">Total</span>
+        </div>
+      </div>
     </div>
-  </div> 
+  </div>
 </form>  
 <table id="grid" class="bordered-table zebra-striped">
 		<thead>
