ap auditstr - user payments aggregate value

--- a/src/main/webapp/commission_conference_user.html
+++ b/src/main/webapp/commission_conference_user.html
@@ -40,10 +40,13 @@
       </div>
      <table id="grid" class="bordered-table zebra-striped">
         <thead>
-          <th>Data Pagamento</th>
+          <th>Dt Pagto</th>
+          <th>Caixa</th>
+          <th>Conta</th>
           <th>Categ</th>
           <th>Descrição</th>
           <th>Valor</th>
+          <th title="Valor agredado">Val Agr</th>
         </thead>
         <tbody>
         </tbody>
