--- a/src/main/webapp/financial/total_to_payment.html
+++ b/src/main/webapp/financial/total_to_payment.html
@@ -111,6 +111,7 @@
           <th>Categoria</th>
           <th>Descrição</th>
           <th>Valor</th>
+          <th title="Valor agredado">Val Agr</th>
         </thead>
         <tbody>
         </tbody>
