--- a/src/main/webapp/financial/commission_report.html
+++ b/src/main/webapp/financial/commission_report.html
@@ -136,6 +136,7 @@
                 "<td>"+payment.category+"</td>" +
                 "<td>"+payment.obs+"</td>" + 
                 "<td>"+(payment.value).formatMoney()+"</td>" +
+                (payment.aggregateValue != 0 ? "<td>" + (payment.aggregateValue).formatMoney() + "</td>" : "<td>" + "</td>") + 
                 "</tr>";
               };
               $("#grid_payments tbody").html(ret);
@@ -328,6 +329,7 @@
       <th>Categoria</th>
       <th>Descrição</th>
       <th>Valor</th>
+      <th title="Valor agredado">Val Agr</th>
     </thead>
     <tbody>
     </tbody>
