relation ship - manager

--- a/src/main/webapp/manager/index.html
+++ b/src/main/webapp/manager/index.html
@@ -26,6 +26,11 @@
               <img width='32' src="/images/configure.png"/>
            </a>
           </li>
+          <li>        
+            <a href="/bprelationship/list_bprelationship" target="relationshippage" class="_popover" rel="popover" data-content="Relacionamentos" data-original-title="Relacionamentos">
+              <img width='32' src="/images/relationship.png"/>
+            </a>
+          </li>            
           <li>
            <a href="/customer/upload_migration_file.html" class="_popover" rel="popover" data-content="Migrar planilha" data-original-title="Migrar Planilha">
               <img width='32' src="/images/icon_company.png"/>
