--- a/src/main/webapp/financial_admin/period_ranking.html
+++ b/src/main/webapp/financial_admin/period_ranking.html
@@ -72,7 +72,7 @@
           </div>
         </div>
       </div>
-      <div class="clearfix">
+      <div class="clearfix lift:SecuritySnippet.hasUnitModule">
         <label for="unit">Unidade </label>
           <div class="input">
             <div class="inline-inputs">
