csv upload - monthly lines perpage

--- a/src/main/webapp/manager/index.html
+++ b/src/main/webapp/manager/index.html
@@ -33,7 +33,7 @@
           </li>            
           <li>
            <a href="/customer/upload_migration_file.html" class="_popover" rel="popover" data-content="Migrar planilha" data-original-title="Migrar Planilha">
-              <img width='32' src="/images/icon_company.png"/>
+              <img width='32' src="/images/excel.png"/>
            </a>
           </li>
         </ul>
