ofx improvements - audistr

--- a/src/main/webapp/monthly/edit_monthly.html
+++ b/src/main/webapp/monthly/edit_monthly.html
@@ -41,8 +41,8 @@
                       </div>
                   </div>
               </div>
-              <div class="clearfix lift:SecuritySnippet.hasAuditModule">
-                  <label for="createdAt">Empresa Cliente</label>
+              <div class="clearfix lift:SecuritySnippet.isSuperAdmin">
+                  <label for="bpname">Empresa Cliente</label>
                   <div class="input">
                     <div class='inline-inputs'>
                       <div class="input-prepend" style='float:left; padding-right:10px'>
