permission improvement isAdmin - revert payment begin

--- a/src/main/webapp/financial_admin/control_panel.html
+++ b/src/main/webapp/financial_admin/control_panel.html
@@ -50,7 +50,7 @@
 			<th>Data</th>
 			<th>Bom Para</th>
 			<th>Cliente</th>
-			<th>Recebido</th>
+			<!--th>Recebido</th-->
 		</thead>
 		<tbody>
 		</tbody>
