--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -452,6 +452,9 @@
                     <div class="input">
                       <div class="input-prepend"> 
                         Já foi pago ? <input type="checkbox" checked="true" name="paid" id="paid" class= "url_parameter">
+                        <a id="b_mark_as_unpaid" class="lift:SecuritySnippet.isSuperAdmin btn danger b_mark_as_unpaid" title="Reverter pagamento">
+                          Reverter
+                        </a>              
                       </div>
                     </div>
                   </div> 
