--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -294,7 +294,7 @@
                           <div class="form-group">
                             <label>Permissões</label>
                             <select multiple="multiple" id="groupPermission" name="groupPermission">
-                              <option value="1">Administrador</option>
+                              <option class="lift:SecuritySnippet.isAdmin" value="1">Administrador</option>
                               <option class="lift:SecuritySnippet.isNotEgrexSystem" value="13">Clientes</option>
                               <option class="lift:SecuritySnippet.isEgrexSystem" value="13">Membros</option>
                               <option class="lift:SecuritySnippet.isMedicalSystem" value="19">Prontuário</option>
@@ -303,15 +303,15 @@
                               <option value="4">Agenda Geral</option>
                               <option value="20">Comanda Geral</option>
                               <option value="18">Comanda Senha</option>
-                              <option class="lift:SecuritySnippet.hasFinancialModule" value="9">Gerente de Serviços</option>
+                              <option class="lift:SecuritySnippet.isAdmin" value="9">Gerente de Serviços</option>
                               <option value="5">. Serviços</option>
-                              <option class="lift:SecuritySnippet.hasInventoryModule" value="7">Gerente de Estoque</option>
+                              <option class="lift:SecuritySnippet.isAdmin" value="7">Gerente de Estoque</option>
                               <option class="lift:SecuritySnippet.hasInventoryModule" value="2">. Estoque</option>
-                              <option class="lift:SecuritySnippet.hasFinancialModule" value="8">Gerente de Financeiro</option>
+                              <option class="lift:SecuritySnippet.isAdmin" value="8">Gerente de Financeiro</option>
                               <option class="lift:SecuritySnippet.hasFinancialModule" value="3">. Financeiro</option>
                               <option class="lift:SecuritySnippet.hasFinancialModule" value="15">. Caixa Geral</option>
                               <option class="lift:SecuritySnippet.hasFinancialModule" value="12">. . Caixa</option>
-                              <option value="11">Gerente de Pessoas</option>
+                              <option class="lift:SecuritySnippet.isAdmin" value="11">Gerente de Pessoas</option>
                               <option value="6">Prof Agenda</option>
                               <option value="21">Prof Agenda Geral</option>
                               <option value="16">Prof Comissão</option>
