revert payment - production

--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -452,7 +452,7 @@
                     <div class="input">
                       <div class="input-prepend"> 
                         Já foi pago ? <input type="checkbox" checked="true" name="paid" id="paid" class= "url_parameter">
-                        <a id="b_mark_as_unpaid" class="lift:SecuritySnippet.isSuperAdmin btn danger b_mark_as_unpaid" title="Reverter pagamento">
+                        <a id="b_mark_as_unpaid" class="lift:SecuritySnippet.isAdmin btn danger b_mark_as_unpaid" title="Reverter pagamento">
                           Reverter
                         </a>              
                       </div>
