--- a/src/main/webapp/financial/list_category.html
+++ b/src/main/webapp/financial/list_category.html
@@ -41,7 +41,7 @@
 		<tbody>
 			<tr class="lift:AccountCategorySnippet:list">
 				<td>
-					<f:id></f:id>
+					<f:colorid></f:colorid>
 				</td>
 				<td>
 					<f:name></f:name>
