quiz improvements - model print - quebralinha - select if only one

--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -785,7 +785,8 @@
                 <div class="clearfix">
                     <label for="text"><span data-i18n='Questionário'></span></label>
                     <div class="input">
-                        <select class="large" id="quiz_quiz" size="30" type="text">
+                        <select class="large local_storage" id="quiz_quiz" 
+                        name="quiz_quiz" size="30" type="text">
                         </select>
                     </div>
                 </div>
