empty template - background fff, for white backgrund in help window

--- a/src/main/webapp/templates-hidden/empty.html
+++ b/src/main/webapp/templates-hidden/empty.html
@@ -57,7 +57,9 @@
     <style type="text/css">
       /* Override some defaults */
       html, body {
-        background-color: #eee;
+        /* rigel - troquei o eee por fff para o help ficar com
+        fundo branco. estava cinza */
+        background-color: #fff;
       }
       li{
         list-style:none;
