update financial movements generated by cashier close - only admin

--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -326,6 +326,10 @@
             <div>
               <div class="well">
                 <input class="lift:SecuritySnippet.isNotAdminRead btn success b_add_account" id="b_add_account" type="button" value="Salvar">
+                <!-- só aqui mesmo sem repetir lá embaixo pq não pode ser regra -->
+                <a id="b_upd_cashier_account" class="lift:SecuritySnippet.isAdmin btn danger b_upd_cashier_account" title="Alterar lançamento de caixa fechado">
+                  Alt Lanc Caixa
+                </a>              
               </div>
               <div class="span18 row">
                 <div class="span8">             
